# RaspberryPi

./: README.md  exp.txt  test_202110965.txt  tree.html  wifi_instructions.txt
Documents/: EMSYS_WEEK10.md
ExampleCode/: Makefile  README.md
InstallFiles/: libc6-udeb_2.36-9+deb12u3_arm64.udeb
ProjectCode/: CMakeLists.txt  README.md  main.cpp  modified_tensorflow_2.6.0_install.sh
ProjectCode/CTesting/: Makefile  TFLite_detection_image.cpp  main.cpp  minimal.cpp
ProjectCode/CTesting/InstallScript/: README.txt
ProjectCode/Drivers/: .Module.symvers.cmd  .buttonDriver.ko.cmd  .buttonDriver.mod.cmd  .buttonDriver.mod.o.cmd  .buttonDriver.o.cmd  .ledDriver.ko.cmd  .ledDriver.mod.cmd  .ledDriver.mod.o.cmd  .ledDriver.o.cmd  .modules.order.cmd  .segmentDriver.ko.cmd  .segmentDriver.mod.cmd  .segmentDriver.mod.o.cmd  .segmentDriver.o.cmd  Makefile  buttonDriver.c  buttonDriver.ko  buttonDriver.mod  buttonDriver.mod.c  ledDriver.c  ledDriver.ko  ledDriver.mod  ledDriver.mod.c  modules.order  segmentDriver.c  segmentDriver.ko  segmentDriver.mod
ProjectCode/PyTesting/: test.py
ProjectCode/Tensorflow/: converter.py
ProjectCode/installScript/: README.md  modified_tensorflow_2.6.0_install.sh
ProjectCode/opencvCode/opencv_example/: file.h264  gray_example.cpp  install_cv4.5.1_rasbian.sh  outcpp01.avi
ProjectCode/opencvCode/opencv_testing/: cameraio.cpp
ProjectCode/sleep_detect/new_ver_eye_classification/: train.py
ProjectCode/tensorflow/: README.md
ProjectCode/testing/: export.py  train.py
ProjectCode/testing/weights/: classifier_weights_iter_50.pt
(+60 files in other folders)
